fix(client): fix datepicker alignment and change payment button text

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,7 +17,13 @@ body {
 }
 
 /* Прибираємо стандартні іконки браузера */
-input[type='date']::-webkit-calendar-picker-indicator {
-    display: none;
+input::-webkit-calendar-picker-indicator,
+input::-webkit-inner-spin-button,
+input::-webkit-clear-button {
+    display: none !important;
     -webkit-appearance: none;
+}
+
+.react-datepicker-wrapper {
+    width: 100%;
 }
